// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package metadata.types;

option go_package = "openpitrix.io/metadata/pkg/pb/types;pbtypes";

import "metadata/types/etcd.proto";
import "metadata/types/confd.proto";

message FrontgateId {
	string id = 1;
	string payload = 2;
}
message FrontgateNodeId {
	string id = 1;
	string node_id = 2;
	string payload = 3;
}

message FrontgateIdList {
	repeated string id_list = 1;
}

message FrontgateConfig {
	string id = 1;
	string node_id = 2;

	string host = 3;
	int32 listen_port = 4;

	string pilot_host = 5;
	int32 pilot_port = 6;

	repeated metadata.types.FrontgateEndpoint node_list = 7;
	metadata.types.EtcdConfig etcd_config = 8;
	metadata.types.ConfdConfig confd_config = 9;

	string log_level = 10;
	bool auto_update = 11;
}

message FrontgateEndpoint {
	string frontgate_id = 1;
	string frontgate_node_id = 2;
	string node_ip = 3;  // hide for pilot
	int32 node_port = 4; // hide for pilot
}

message RunCommandOnFrontgateRequest {
	FrontgateEndpoint endpoint = 1;
	string command = 2;
	int32 timeout_seconds = 3;
}
